# sober

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_BOOTSTRAP.md  LICENSE  README.md  cliff.toml  docker-bake.hcl  docker-compose.prod.yml  docker-compose.yml  justfile
backend/: Cargo.toml  Cross.toml
backend/.cargo/: audit.toml
backend/crates/sober-agent/: Cargo.toml  build.rs  metrics.toml
backend/crates/sober-agent/src/: agent.rs  audit.rs  backends.rs  broadcast.rs  confirm.rs  context.rs  conversation.rs  dispatch.rs  error.rs  extraction.rs  grpc.rs  grpc_plugins.rs  history.rs  ingestion.rs  lib.rs  main.rs  secret_registry.rs  stream.rs  system_jobs.rs  turn.rs  util.rs
backend/crates/sober-agent/tests/: shell_integration.rs
backend/crates/sober-api/: Cargo.toml  build.rs  metrics.toml
backend/crates/sober-api/src/: admin.rs  connections.rs  guards.rs  lib.rs  main.rs  proto_convert.rs  state.rs  subscribe.rs  ws_types.rs
backend/crates/sober-api/tests/: http.rs  ws.rs
backend/crates/sober-auth/: Cargo.toml  metrics.toml
backend/crates/sober-auth/src/: error.rs  extractor.rs  lib.rs  middleware.rs  service.rs  token.rs
backend/crates/sober-cli/: Cargo.toml  build.rs
backend/crates/sober-cli/src/: cli.rs  sober.rs  soberctl.rs
backend/crates/sober-core/: Cargo.toml  metrics.toml
backend/crates/sober-core/src/: admin.rs  config.rs  error.rs  lib.rs  telemetry.rs  test_utils.rs  workspace_config.rs
backend/crates/sober-crypto/: Cargo.toml  metrics.toml
backend/crates/sober-crypto/src/: envelope.rs  error.rs  keys.rs  lib.rs  password.rs  service_identity.rs
backend/crates/sober-crypto/tests/: envelope_integration.rs  proptest_crypto.rs
backend/crates/sober-db/: Cargo.toml  metrics.toml
backend/crates/sober-db/src/: lib.rs  pool.rs  rows.rs
backend/crates/sober-db/tests/: repos.rs
backend/crates/sober-gateway/: Cargo.toml  build.rs  metrics.toml
backend/crates/sober-gateway/src/: bridge.rs  connector.rs  error.rs  grpc.rs  helpers.rs  lib.rs  main.rs  outbound.rs  service.rs  types.rs
backend/crates/sober-llm/: Cargo.toml  metrics.toml
backend/crates/sober-llm/src/: acp.rs  client.rs  engine.rs  error.rs  jsonrpc.rs  lib.rs  resolver.rs  streaming.rs  types.rs
backend/crates/sober-mcp/: Cargo.toml  metrics.toml
backend/crates/sober-mcp/src/: adapter.rs  client.rs  config.rs  credentials.rs  error.rs  jsonrpc.rs  lib.rs  pool.rs  types.rs
backend/crates/sober-mcp/tests/: integration.rs  mock_mcp_server.py
backend/crates/sober-memory/: Cargo.toml  metrics.toml
backend/crates/sober-memory/src/: error.rs  lib.rs
backend/crates/sober-memory/tests/: store_integration.rs
backend/crates/sober-mind/: Cargo.toml  metrics.toml
backend/crates/sober-mind/instructions/: artifacts.md  evolution.md  extraction.md  internal-tools.md  memory.md  reasoning.md  safety.md  soul.md  tools.md  workspace.md
backend/crates/sober-mind/src/: access.rs  assembly.rs  error.rs  evolution.rs  frontmatter.rs  injection.rs  instructions.rs  layers.rs  lib.rs  references.rs  soul.rs
backend/crates/sober-plugin/: Cargo.toml  metrics.toml
backend/crates/sober-plugin-gen/: Cargo.toml
backend/crates/sober-plugin-gen/src/: compile.rs  error.rs  generate.rs  lib.rs  scaffold.rs
backend/crates/sober-plugin/src/: audit.rs  capability.rs  error.rs  host.rs  host_fns.rs  lib.rs  manager.rs  manifest.rs  registry.rs  tool.rs
backend/crates/sober-plugin/tests/: e2e.rs  hello_world.rs
backend/crates/sober-sandbox/: Cargo.toml  metrics.toml
backend/crates/sober-sandbox/src/: audit.rs  bwrap.rs  command_policy.rs  config.rs  detect.rs  error.rs  lib.rs  policy.rs  proxy.rs  resolve.rs  risk.rs
backend/crates/sober-sandbox/tests/: command_policy_proptest.rs
backend/crates/sober-scheduler/: Cargo.toml  build.rs  metrics.toml
backend/crates/sober-scheduler/src/: engine.rs  error.rs  executor.rs  (+5 more)
backend/crates/sober-skill/: Cargo.toml  metrics.toml
backend/crates/sober-web/: Cargo.toml
backend/crates/sober-workspace/: Cargo.toml  metrics.toml
backend/migrations/: 20260306000001_create_types.sql  20260306000002_create_roles.sql  20260306000003_create_users.sql  20260306000004_create_user_roles.sql  20260306000005_create_sessions.sql  20260306000006_create_conversations.sql  20260306000007_create_messages.sql  20260306000008_create_mcp_servers.sql  20260306000009_create_audit_log.sql  20260306000010_create_jobs.sql  20260306000011_create_workspaces.sql  20260306000012_create_workspace_repos.sql  20260306000013_create_worktrees.sql  20260306000014_create_artifacts.sql  20260306000015_create_artifact_relations.sql  20260309000001_create_encryption_keys.sql  20260309000002_create_user_secrets.sql  20260311000001_workspace_schema_v2.sql  20260311000002_conversation_workspace.sql  20260312000001_conversation_permission_mode.sql  20260312100001_create_scheduled_jobs.sql  20260312200001_agent_scheduler_integration.sql  20260314000001_unique_active_job_name_owner.sql  20260316000001_conversation_improvements.sql  20260316000002_group_conversations.sql  20260316000003_rename_secrets_add_conversation.sql  20260319000001_fix_artifacts_conversation_fk_cascade.sql  20260320000001_create_plugins.sql  20260321000001_migrate_mcp_to_plugins.sql  20260323000001_sandbox_and_invocation_logs.sql  20260323000002_add_workspace_to_execution_logs.sql  20260325000001_agent_rewrite.sql  20260326000001_workspace_settings.sql  20260329000001_capability_filtering.sql  20260329000002_create_evolution_events.sql  20260331000001_add_message_search_vectors.sql  20260401000001_multimodal_content.sql  20260401000002_unread_last_read_message.sql  20260402000003_gateway_bot_user.sql  20260402000004_gateway_tables.sql  (+3 more)
backend/soul/: SOUL.md
sdks/sober-pdk/: Cargo.toml  README.md
sdks/sober-pdk/build_support/: Cargo.toml
sdks/sober-pdk/src/: conversation.rs  filesystem.rs  http.rs  kv.rs  lib.rs  llm.rs  log.rs  memory.rs  metrics.rs  schedule.rs  secret.rs  tool.rs
tools/dashboard-gen/: Cargo.toml
tools/dashboard-gen/src/: main.rs
(+570 files in other folders)
