[package]
name = "dashboard-gen"
version = "0.1.0"
edition = "2024"
publish = false
description = "Generates Grafana dashboards and Prometheus alert rules from metrics.toml files"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
