[package]
name = "sober-agent"
version = "0.5.0"
edition.workspace = true

[[bin]]
name = "sober-agent"
path = "src/main.rs"

[lib]
name = "sober_agent"
path = "src/lib.rs"

[dependencies]
sober-core = { path = "../sober-core" }
sober-db = { path = "../sober-db" }
sober-mind = { path = "../sober-mind" }
sober-mcp = { path = "../sober-mcp" }
sober-sandbox = { path = "../sober-sandbox" }
sober-workspace = { path = "../sober-workspace" }
sober-llm = { path = "../sober-llm" }
sober-memory = { path = "../sober-memory" }
bincode = "1"
anyhow = { workspace = true }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-prost-build = { workspace = true }
