[package]
name = "sober-agent"
version = "0.24.0"
edition.workspace = true

[[bin]]
name = "sober-agent"
path = "src/main.rs"

[lib]
name = "sober_agent"
path = "src/lib.rs"

[dependencies]
sober-core = { path = "../sober-core", features = ["grpc-telemetry"] }
sober-crypto = { path = "../sober-crypto" }
sober-db = { path = "../sober-db" }
sober-mind = { path = "../sober-mind" }
sober-mcp = { path = "../sober-mcp" }
sober-sandbox = { path = "../sober-sandbox" }
sober-plugin = { path = "../sober-plugin" }
sober-plugin-gen = { path = "../sober-plugin-gen" }
sober-skill = { path = "../sober-skill" }
sober-workspace = { path = "../sober-workspace" }
sober-llm = { path = "../sober-llm" }
sober-memory = { path = "../sober-memory" }
base64 = "0.22"
anyhow = { workspace = true }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"
dashmap = "6"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "brotli"] }
tower = { workspace = true }
metrics = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-prost-build = { workspace = true }
