[package]
name = "sober-auth"
version = "0.1.0"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
sober-crypto = { path = "../sober-crypto" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-core = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
