[package]
name = "sober-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "sober"
path = "src/sober.rs"

[[bin]]
name = "soberctl"
path = "src/soberctl.rs"

[dependencies]
sober-core = { path = "../sober-core" }
sober-crypto = { path = "../sober-crypto" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
