[package]
name = "sober-cli"
version = "0.2.0"
edition.workspace = true

[[bin]]
name = "sober"
path = "src/sober.rs"

[[bin]]
name = "soberctl"
path = "src/soberctl.rs"

[dependencies]
# Internal crates
sober-core = { path = "../sober-core" }
sober-crypto = { path = "../sober-crypto" }
sober-db = { path = "../sober-db" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { workspace = true }

# Database (for migrations)
sqlx = { workspace = true, features = ["macros"] }

# Error handling
anyhow = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Domain primitives
chrono = { workspace = true }

# Password input
rpassword = "7.4"
