[package]
name = "sober-cli"
version = "0.3.0"
edition.workspace = true

[[bin]]
name = "sober"
path = "src/sober.rs"

[[bin]]
name = "soberctl"
path = "src/soberctl.rs"

[dependencies]
# Internal crates
sober-core = { path = "../sober-core" }
sober-crypto = { path = "../sober-crypto" }
sober-db = { path = "../sober-db" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { workspace = true }

# Database (for migrations)
sqlx = { workspace = true, features = ["macros"] }

# Error handling
anyhow = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Domain primitives
chrono = { workspace = true }

# gRPC (soberctl → scheduler/agent)
hyper-util = { version = "0.1.20", features = ["tokio"] }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }

# Password input
rpassword = "7.4"

[build-dependencies]
tonic-prost-build = { workspace = true }
