[package]
name = "sober-core"
version = "0.8.0"
edition.workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Domain primitives
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP / API
axum-core = { workspace = true }
axum = { workspace = true }
http = { workspace = true }

# Binary serialization (for job payloads)
bincode = "1"

# Configuration
dotenvy = { workspace = true }
toml = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Database (optional, for sqlx type derives)
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
http-body-util = "0.1"

[features]
default = []
postgres = ["dep:sqlx"]
test-utils = []
