[package]
name = "sober-mcp"
version = "0.3.0"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
sober-crypto = { path = "../sober-crypto" }
sober-sandbox = { path = "../sober-sandbox" }
base64 = "0.22.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
