[package]
name = "sober-mind"
version = "0.3.0"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
sober-memory = { path = "../sober-memory" }
sober-crypto = { path = "../sober-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.26.0"
