[package]
name = "sober-mind"
version = "0.7.0"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
sober-memory = { path = "../sober-memory" }
sober-crypto = { path = "../sober-crypto" }
sober-skill = { path = "../sober-skill" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1.12.3"
serde_yml = "0.0.12"

[dev-dependencies]
tempfile = "3.26.0"
