[package]
name = "sober-plugin-gen"
version = "0.2.1"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
sober-llm = { path = "../sober-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
