[package]
name = "sober-plugin"
version = "0.2.0"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
extism = "1.20"

[dev-dependencies]
pretty_assertions = "1"
