[package]
name = "sober-sandbox"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process-level execution sandboxing via bubblewrap (bwrap)"

[dependencies]
sober-core = { path = "../sober-core" }
tokio = { workspace = true, features = ["process", "time", "io-util", "net", "sync", "macros"] }
serde = { workspace = true }
toml = "1.0.6"
tracing = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1"
which = "8.0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
proptest = "1.10.0"
