[package]
name = "sober-web"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "sober-web"
path = "src/main.rs"

[dependencies]
sober-core = { path = "../sober-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
