[package]
name = "sober-web"
version = "0.2.0"
edition.workspace = true

[[bin]]
name = "sober-web"
path = "src/main.rs"

[dependencies]
sober-core = { path = "../sober-core" }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures = "0.3"
http = { workspace = true }
hyper = "1"
hyper-util = { version = "0.1.20", features = ["tokio", "client-legacy", "http1", "http2"] }
mime_guess = "2"
rust-embed = { version = "8.11.0", features = ["mime-guess", "include-exclude"] }
tokio = { workspace = true }
tokio-tungstenite = "0.28"
tower = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
