[package]
name = "sober-workspace"
version = "0.3.0"
edition.workspace = true

[dependencies]
sober-core = { path = "../sober-core" }
metrics = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3.27"
tokio = { workspace = true, features = ["full", "test-util"] }
